# FXEngine

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
Editor/: CMakeLists.txt
Editor/assets/prefabs/: Tank.fxprefab
Editor/assets/shaders/: FlatColor.frag  FlatColor.vert  Line.frag  Line.vert  Renderer2D.frag  Renderer2D.vert  Texture.frag  Texture.vert
Editor/src/: EditorApp.cpp  EditorApp.h  EditorApp_Project.cpp  EditorApp_UI.cpp  EditorApp_Viewport.cpp  EditorCamera.cpp  EditorCamera.h  ImGuiLayer.cpp  ImGuiLayer.h  SampleScene.cpp  SampleScene.h  SelectionContext.h  main.cpp
Editor/src/Commands/: CommandStack.h  StructuralCommands.cpp  StructuralCommands.h
Editor/src/Game/: GameLibrary.cpp  GameLibrary.h  GameProject.cpp  GameProject.h
Editor/src/Panels/: ComponentDrawer.cpp  ComponentDrawer.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Editor/src/Platform/: FileDialogs.cpp  FileDialogs.h
Editor/src/Scripts/: Jump.h  Move.h  ScriptRegistrations.h.in  Spin.h  SpinScript.h  asd.h  asddsa.h
Engine/: CMakeLists.txt
Engine/include/FXEngine/Asset/: Asset.h  AssetManager.h
Engine/include/FXEngine/Core/: Application.h  EngineABI.h  FileSystem.h  FileWatcher.h  Input.h  KeyCodes.h  Log.h  Project.h  UUID.h  Version.h  Window.h
Engine/include/FXEngine/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/FXEngine/Renderer/: Buffer.h  Framebuffer.h  OrthographicCamera.h  RenderCommand.h  Renderer2D.h  Shader.h  Texture.h  TextureLibrary.h  VertexArray.h
Engine/include/FXEngine/Scene/: ComponentMeta.h  Components.h  Entity.h  EntityRef.h  EntitySnapshot.h  PrefabOverrides.h  PrefabSerializer.h  Scene.h  SceneSerializer.h  ScriptFields.h  ScriptRegistry.h  ScriptableEntity.h  Systems.h
Engine/src/Asset/: AssetManager.cpp
Engine/src/Core/: Application.cpp  FileSystem.cpp  FileWatcher.cpp  Input.cpp  Log.cpp  Project.cpp  UUID.cpp  Version.cpp  Window.cpp
Engine/src/Events/: EventTranslator.cpp  EventTranslator.h
Engine/src/Renderer/: Buffer.cpp  Framebuffer.cpp  OrthographicCamera.cpp  RenderCommand.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  TextureLibrary.cpp  VertexArray.cpp
Engine/src/Scene/: ComponentMeta.cpp  Entity.cpp  EntitySerialization.cpp  EntitySerialization.h  EntitySnapshot.cpp  PrefabOverrides.cpp  PrefabSerializer.cpp  Scene.cpp  SceneSerializer.cpp  ScriptRegistry.cpp  Systems.cpp
Notes/: 00-Durum-ve-Plan.md  00-Yol-Haritasi.md  01-Yol-Haritasi-v2.md  02-Mimari.md  03-Yapilacaklar.md  Asama-B-Plan.md  Borc-02-SelectionContext.md  Borc-03-Coklu-Secim.md  Borc-04-Dosya-Izleyici.md  Borc-05-Birim-Testleri.md  Borc-06-Faz22-Artiklari.md  Borc-07-Refactor.md  Faz-00-Notlar.md  Faz-005-Notlar.md  Faz-01-Notlar.md  Faz-02-Notlar.md  Faz-03-Notlar.md  Faz-04-Notlar.md  Faz-05-Notlar.md  Faz-06-Notlar.md  Faz-07-Notlar.md  Faz-08-Notlar.md  Faz-09-Notlar.md  Faz-10-Notlar.md  Faz-11-Notlar.md  Faz-12-Notlar.md  Faz-13-Notlar.md  Faz-16-Notlar.md  Faz-18-Notlar.md  Faz-21-Notlar.md  Faz-22-Notlar.md  Faz-A1-Notlar.md  Faz-A2-Notlar.md  Faz-A3-Notlar.md  Faz-A4-Notlar.md  Faz-A5-Notlar.md  Faz-B-Notlar.md  Faz-B7-Notlar.md  Faz-C1-Notlar.md  Faz-C2-Notlar.md  (+5 more)
Tests/: AssetManager.test.cpp  CMakeLists.txt  ChildOrder.test.cpp  ComponentMeta.test.cpp  DeferredDestroy.test.cpp  Duplicate.test.cpp  EntitySnapshot.test.cpp  Input.test.cpp  Prefab.test.cpp  Project.test.cpp  Scene.test.cpp  SceneSerializer.test.cpp  Script.test.cpp  TestMain.cpp  TestSupport.h  UUID.test.cpp
cmake/: Dependencies.cmake  FXEngineConfigInstalled.cmake
